--- a/style.css
+++ b/style.css
@@ -601,6 +601,36 @@ footer{
   }
 }
 
+.container {
+  padding: 20px;
+  min-height: 30vh;
+  background-color: cadetblue;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.card {
+  text-align: center;
+}
+
+mark{
+  background-color: rgb(230, 227, 227);
+  padding: 5px;
+}
+
+.buy{
+  background-color: rgb(3, 249, 249);
+  padding: 5px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
 
 
 
