--- a/style.css
+++ b/style.css
@@ -601,7 +601,7 @@ footer{
   }
 }
 
-.container {
+/* .container {
   padding: 20px;
   min-height: 30vh;
   background-color: cadetblue;
@@ -629,7 +629,7 @@ mark{
   border-radius: 10px;
   border: none;
   cursor: pointer;
-}
+} */
 
 
 
