--- a/cart.css
+++ b/cart.css
@@ -1,14 +1,48 @@
-
-
 body {
    margin: 0;
    padding: 0;
 }
 
-aside,
-main {
+.container {
+   gap: 8px;
+   margin: 0 auto;
+   padding: 10px;
+   width: 100mvh;
+   background-color: cornflowerblue;
+   overflow: hidden;
+}
+
+.container button{
+   background-color: rgb(16, 224, 251);
+   padding: 5px;
+   border-radius: 5px;
+   border: none;
+}
+
+.container button:hover{
+   background-color: black;
+   color: white;
+}
+
+aside
+ {
    border: 1px solid grey;
    padding: 10px;
+   background-color: lightgrey;
+   
+}
+
+.buy{
+   background-color: cyan;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+}
+
+.buy:hover{
+   background-color: black;
+   color: #fff;
+   transition: all .5s ease;
 }
 
 .cards {
